--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,6 +8,6 @@
             <a class="nav-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
         </li>
         {% endif %} {% endfor %}
-        <li class="nav-item {% if page.url contains '/blog' %}active{% endif %}"><a class="nav-link" href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
+        <li class="nav-item {% if page.url contains '/blog' %}active{% endif %}"><a class="nav-link" href="{{ "/blog.html" | prepend: site.baseurl }}">Blog</a></li>
     </ul>
 </nav>
