--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,13 @@
 
 <body>
 {% include header.html %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-8 offset-2">
 {{ content }}
+        </div>
+    </div>
+</div>
 {% include footer.html %}
 </body>
 </html>
