--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <body>
 {% include header.html %}
 <div class="container-fluid">
-    <div class="row">
+    <div class="row mt-4">
         <div class="col-8 offset-2">
 {{ content }}
         </div>
