--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,5 +5,8 @@
             <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item {% if page.url contains '/blog' %}active{% endif %}"><a class="nav-link" href="{{ "/blog/index.html" | prepend: site.baseurl }}">Blog</a></li>
+        <li class="nav-item">
+            <a class="nav-link" href="/mg-cv.pdf">CV</a>
+        </li>
     </ul>
 </nav>
