fix blockquote styling

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cosmo/bootstrap.min.css"/>
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"/>
 
+    <style type="text/css">
+        blockquote {
+            font-style: italic;
+        }
+    </style>
+
+
     <title>{% if page.title %}{{site.title}} - {{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 </head>
