--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,16 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <link rel="shortcut icon" href="favicon.png"/>
-    <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cosmo/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/minorgordon.net.css"/>
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"/>
-
-    <style type="text/css">
-        blockquote {
-            font-style: italic;
-        }
-    </style>
-
 
     <title>{% if page.title %}{{site.title}} - {{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 </head>
