--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,5 +8,8 @@
         <li class="nav-item">
             <a class="nav-link" href="/mg-cv.pdf">CV</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="mailto:mail@minorgordon.net">Contact</a>
+        </li>
     </ul>
 </nav>
