--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,6 +5,13 @@
             <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item {% if page.url contains '/blog' %}active{% endif %}"><a class="nav-link" href="{{ "/blog/index.html" | prepend: site.baseurl }}">Blog</a></li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Bildungsroman</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="//bildungsroman.minorgordon.net/Passion/">Passion</a>
+                <a class="dropdown-item" href="//bildungsroman.minorgordon.net/Thinker-Doer/">Thinker-Doer</a>
+            </div>
+        </li>
         <li class="nav-item">
             <a class="nav-link" href="/mg-cv.pdf">CV</a>
         </li>
