--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Minor E. Gordon</a>
+        <a class="navbar-brand" href="/">Minor Gordon</a>
         <ul class="navbar-nav me-auto">
             <li class="nav-item {% if page.url == '/' %}active{% endif %}">
                 <a class="nav-link" href="/">Home</a>
