--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,26 @@
 layout: default
 ---
 
-<h2>{{ page.title }}</h2>
-<time>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</time>
-<br/><br/>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 px-0">
+            <h2>{{ page.title }}</h2>
+            <time>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</time>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-12">
 {{ content }}
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-12 d-flex px-0 justify-content-between">
+            {% if page.previous.url %}
+            <h5><a href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a></h5>
+            {% endif %}
+            {% if page.next.url %}
+            <h5><a href="{{page.next.url}}">{{page.next.title}} &raquo;</a></h5>
+            {% endif %}
+        </div>
+    </div>
+</div>
