--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,7 +3,7 @@
         <a class="navbar-brand" href="/">Minor Gordon</a>
         <ul class="navbar-nav me-auto">
             <li class="nav-item {% if page.url == '/' %}active{% endif %}">
-                <a class="nav-link" href="/">Home</a>
+                <a class="nav-link" href="/">About</a>
             </li>
             <li class="nav-item {% if page.url contains '/blog' %}active{% endif %}"><a class="nav-link" href="{{ "/blog/index.html" | prepend: site.baseurl }}">Blog</a></li>
 <!--            <li class="nav-item dropdown">-->
