--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,10 +2,10 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Minor Gordon</a>
         <ul class="navbar-nav me-auto">
-            <li class="nav-item {% if page.url == '/' %}active{% endif %}">
-                <a class="nav-link" href="/">About</a>
+            <li class="nav-item">
+                <a class="nav-link {% if page.url == '/' %}active{% endif %}" href="/">About</a>
             </li>
-            <li class="nav-item {% if page.url contains '/blog' %}active{% endif %}"><a class="nav-link" href="{{ "/blog/index.html" | prepend: site.baseurl }}">Blog</a></li>
+            <li class="nav-item"><a class="nav-link {% if page.url contains '/blog' %}active{% endif %}" href="{{ "/blog/index.html" | prepend: site.baseurl }}">Blog</a></li>
 <!--            <li class="nav-item dropdown">-->
 <!--                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Bildungsroman</a>-->
 <!--                <div class="dropdown-menu">-->
@@ -13,7 +13,7 @@
 <!--                    <a class="dropdown-item" href="//bildungsroman.minorgordon.net/Thinker-Doer/">Thinker-Doer</a>-->
 <!--                </div>-->
 <!--            </li>-->
-            <li class="nav-item {% if page.url contains '/publications.html' %}active{% endif %}"><a class="nav-link" href="{{ "/publications.html" | prepend: site.baseurl }}">Publications</a></li>
+            <li class="nav-item"><a class="nav-link {% if page.url contains '/publications.html' %}active{% endif %}" href="{{ "/publications.html" | prepend: site.baseurl }}">Publications</a></li>
             <li class="nav-item">
                 <a class="nav-link" href="mailto:mail@minorgordon.net">Contact</a>
             </li>
