start of projects

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,6 +13,7 @@
 <!--                    <a class="dropdown-item" href="//bildungsroman.minorgordon.net/Thinker-Doer/">Thinker-Doer</a>-->
 <!--                </div>-->
 <!--            </li>-->
+            <li class="nav-item"><a class="nav-link {% if page.url contains '/projects.html' %}active{% endif %}" href="{{ "/projects.html" | prepend: site.baseurl }}">Projects</a></li>
             <li class="nav-item"><a class="nav-link {% if page.url contains '/publications.html' %}active{% endif %}" href="{{ "/publications.html" | prepend: site.baseurl }}">Publications</a></li>
             <li class="nav-item">
                 <a class="nav-link" href="mailto:mail@minorgordon.net">Contact</a>
