--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -1,6 +1,8 @@
-<div class="card text-center" style="width: 32rem">
-    <a href="{{ include.href }}"><img class="card-img-top mt-2" src="{{ include.img_src }}"/></a>
-    <div class="card-body">
+<div class="card text-center {{ include.class }}" style="width: 28rem">
+    <div class="card-body d-flex flex-column">
+        <div class="align-items-center d-flex flex-grow-1 justify-content-center">
+            <a href="{{ include.href }}"><img class="card-img" src="{{ include.img_src }}" /></a>
+        </div>
         <h5 class="card-title"><a class="card-link" href="{{ include.href }}">{{ include.title }}</a></h5>
         <h6 class="card-subtitle">{{ include.subtitle }}</h6>
     </div>
