--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,8 +15,16 @@
 <!--            </li>-->
             <li class="nav-item"><a class="nav-link {% if page.url contains '/projects.html' %}active{% endif %}" href="{{ "/projects.html" | prepend: site.baseurl }}">Projects</a></li>
             <li class="nav-item"><a class="nav-link {% if page.url contains '/publications.html' %}active{% endif %}" href="{{ "/publications.html" | prepend: site.baseurl }}">Publications</a></li>
+        </ul>
+        <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link" href="mailto:mail@minorgordon.net">Contact</a>
+                <a class="nav-link" href="https://www.linkedin.com/in/minor-gordon/"><i class="bi bi-linkedin"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://github.com/minorg"><i class="bi bi-github"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="mailto:mail@minorgordon.net"><i class="bi bi-envelope"></i></a>
             </li>
         </ul>
     </div>
