move some posts over from mg4.org

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
             <li class="nav-item">
                 <a class="nav-link {% if page.url == '/' %}active{% endif %}" href="/">About</a>
             </li>
-<!--            <li class="nav-item"><a class="nav-link {% if page.url contains '/blog' %}active{% endif %}" href="{{ "/blog/index.html" | prepend: site.baseurl }}">Blog</a></li>-->
+            <li class="nav-item"><a class="nav-link {% if page.url contains '/blog' %}active{% endif %}" href="{{ "/blog/index.html" | prepend: site.baseurl }}">Blog</a></li>
 <!--            <li class="nav-item dropdown">-->
 <!--                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Bildungsroman</a>-->
 <!--                <div class="dropdown-menu">-->
