--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,9 +3,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <link rel="shortcut icon" href="favicon.png"/>
+    <link rel="shortcut icon" href="{{ "/favicon-16x16.png" | prepend: site.baseurl }}"/>
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"/>
-    <link rel="stylesheet" href="/minorgordon.net.css"/>
+    <link rel="stylesheet" href="{{ "/minorgordon.net.css" | prepend: site.baseurl }}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
