--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Minor Gordon</a>
+        <span class="navbar-brand"></span>
         <ul class="navbar-nav me-auto">
             <li class="nav-item">
                 <a class="nav-link {% if page.url == '/' %}active{% endif %}" href="/">Home</a>
