--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 {% include header.html %}
 <div class="container-fluid">
     <div class="row mt-4">
-        <div class="col-10 offset-1 px-0">
+        <div class="col-md-8 offset-md-2 col-xs-12 px-0">
 {{ content }}
         </div>
     </div>
