--- a/_layouts/header-footer.html
+++ b/_layouts/header-footer.html
@@ -4,12 +4,8 @@
 
 <body>
 {% include header.html %}
-<div class="container-fluid">
-    <div class="row mt-4">
-        <div class="col-xl-8 offset-xl-2 col-xs-12 px-0">
+<div class="mt-4">
 {{ content }}
-        </div>
-    </div>
 </div>
 {% include footer.html %}
 </body>
