--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,7 +6,7 @@
                         <a class="nav-link {% if page.url == '/' %}active{% endif %}" href="/">Home</a>
                     </li>
                     <li class="nav-item"><a class="nav-link {% if page.url contains '/blog' %}active{% endif %}" href="{{ "/blog/index.html" | prepend: site.baseurl }}">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link {% if page.url contains '/projects.html' %}active{% endif %}" href="{{ "/projects/index.html" | prepend: site.baseurl }}">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link {% if page.url contains '/projects/' %}active{% endif %}" href="{{ "/projects/index.html" | prepend: site.baseurl }}">Projects</a></li>
                     <li class="nav-item"><a class="nav-link {% if page.url contains '/publications.html' %}active{% endif %}" href="{{ "/publications.html" | prepend: site.baseurl }}">Publications</a></li>
                 </ul>
             </div>
