--- a/_includes/blog-category-table.html
+++ b/_includes/blog-category-table.html
@@ -2,7 +2,7 @@
 <table class="table table-bordered table-striped">
     <tbody>
     {% for post in site.posts %}
-    {% if include.category == "" or post.categories contains include.category %}
+    {% if post.categories contains include.category or include.category == "" and post.categories.size == 0 %}
     <tr>
         <td style="text-align: center; width: 9em">
             <h5 class="mb-0">{{ post.date | date_to_string }}</h5>
