--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
 <footer class="mt-4 text-center">
-    <p class="muted">&copy Copyright 2023, Minor Gordon. All rights reserved.</p>
+    <p class="muted">
+        &copy Copyright 2023, Minor Gordon. All rights reserved.
+        <br/>
+        Made with &#10084; in Troy, NY.
+    </p>
 </footer>
