--- a/_includes/blog-category-table.html
+++ b/_includes/blog-category-table.html
@@ -3,15 +3,7 @@
     <tbody>
     {% for post in site.posts %}
     {% if post.categories contains include.category or include.category == "" and post.categories.size == 0 %}
-    <tr>
-        <td style="text-align: center; width: 9em">
-            <h5 class="mb-0">{{ post.date | date_to_string }}</h5>
-        </td>
-        <td>
-            <h5 class="mb-0"><a href="{{ post.url }}">{{ post.title }}</a></h5>
-        </td>
-        <td>{{ post.description }}</td>
-    </tr>
+    {% include blog-category-table-row.html date=post.date description=post.description title=post.title url=post.url %}
     {% endif %}
     {% endfor %}
     </tbody>
