--- a/_includes/blog-category-table-row.html
+++ b/_includes/blog-category-table-row.html
@@ -1,9 +1,9 @@
 <tr>
     <td style="text-align: center; width: 9em">
-        <h5 class="mb-0">{{ include.date | date_to_string }}</h5>
+        <b>{{ include.date | date_to_string }}</b>
     </td>
     <td>
-        <h5 class="mb-0"><a href="{{ include.url }}">{{ include.title }}</a></h5>
+        <b><a href="{{ include.url }}">{{ include.title }}</a></b>
     </td>
     <td>{{ include.description }}</td>
 </tr>
