--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -13,7 +13,7 @@ blockquote {
   border-radius: 0.5rem;
 }
 
-.carousel-control-prev-icon,
-.carousel-control-next-icon{
-  filter: invert(1)
-}
+// .carousel-control-prev-icon,
+// .carousel-control-next-icon{
+//   filter: invert(1)
+// }
