add contact mailto link

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,6 +8,7 @@
                     <li class="nav-item"><a class="nav-link {% if page.url contains '/blog' %}active{% endif %}" href="{{ "/blog/index.html" | prepend: site.baseurl }}">Blog</a></li>
                     <li class="nav-item"><a class="nav-link {% if page.url contains '/projects/' %}active{% endif %}" href="{{ "/projects/index.html" | prepend: site.baseurl }}">Projects</a></li>
                     <li class="nav-item"><a class="nav-link {% if page.url contains '/publications.html' %}active{% endif %}" href="{{ "/publications.html" | prepend: site.baseurl }}">Publications</a></li>
+                    <li class="nav-item"><a class="nav-link" href="mailto:hello1@minorgordon.net">Contact</a></li>
                 </ul>
             </div>
             <ul class="navbar-nav">
@@ -16,6 +17,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://github.com/minorg"><i class="bi bi-github"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="mailto:hello1@minorgordon.net"><i class="bi bi-envelope"></i></a>
                 </li>
             </ul>
     </div>
